app/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parrot-deploy
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: parrot
  template:
    metadata:
      labels:
        app: parrot
    spec:
      containers:
        - name: parrot-c
          image: mravily/parrot:v1
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "1Gi"
              cpu: "1000m"
              # Claim PV
              # Try to install package.json
              # Start App
              # Make access from outside the cluster with NodePort
  #---

  # apiVersion: v1
  # kind: PersistentVolume
  # metadata:
  #   name: angular-pv
  # spec:
  #   capacity:
  #     storage: 1Gi
  #   volumeMode: Filesystem
  #   accessModes:
  #     - ReadWriteMany
  #   storageClassName: manual
  #   nfs:
  #     path: /data
  #     server: 192.168.64.1
